# ChangeLog for app-misc/nullmodem
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/nullmodem/ChangeLog,v 1.5 2011/07/21 16:32:50 tomjbe Exp $

  21 Jul 2011; Thomas Beierlein <tomjbe@gentoo.org> metadata.xml:
  Take maintainership

  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> -nullmodem-0.0.4.ebuild,
  -nullmodem-0.0.5.ebuild, metadata.xml:
  Drop maintainer due retirement, bug #118937; remove old.

*nullmodem-0.0.6 (18 Apr 2009)

  18 Apr 2009; Thilo Bangert <bangert@gentoo.org> +nullmodem-0.0.6.ebuild:
  version bump

*nullmodem-0.0.5 (27 Jan 2009)

  27 Jan 2009; Thilo Bangert <bangert@gentoo.org> +nullmodem-0.0.5.ebuild:
  version bump

*nullmodem-0.0.4 (10 Feb 2008)

  10 Feb 2008; Thilo Bangert <bangert@gentoo.org> +metadata.xml,
  +nullmodem-0.0.4.ebuild:
  add to portage
