@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST nullmodem-0.0.6.tar.gz 350584 RMD160 959a344f8158cbe7dc5336dd34a20a74b4c053ce SHA1 c090629212435fe9d861c311b767a001947cba09 SHA256 230dc2dcfd428757af080648be0bc01ebba99fb56c9571d4d53cf84f3b338cd3
-EBUILD nullmodem-0.0.6.ebuild 580 RMD160 1fc3d77f78277bc9fd1b369798f3d9276d92b927 SHA1 3f7f9be80001be2a5d1ea94da4189ae39203eda4 SHA256 d7738f8078af7dd138c9dea1862cb56566465fabb213e911d76168e7b7b8a5e5
-MISC ChangeLog 858 RMD160 278a172604febbb61087ac65f820d79cb90c5e53 SHA1 1b34612f9e72b9a76bd2f10925d3e5720f48179b SHA256 9584ed4da4adc7b87da46cbaa4378af5cd8ddf2b27bbdf16750b46bae9df4851
+EBUILD nullmodem-0.0.6.ebuild 578 RMD160 ee985401ae00504f4b0ebd7ff0078e523f9f8d27 SHA1 6b5476020980e6236b42c980ae70a59a55194632 SHA256 47f6a8b9a6eded6ae712c064b182300772578f8be76cdec3d3d58cc8c5e7f25f
+MISC ChangeLog 984 RMD160 a5d860fd9be57b5d9657b1e4716f621af2bff8cb SHA1 5fa54976376332004846f8bbce7eb75f5fcd8def SHA256 a25a50b843c2b87547633bf4d3a97bfcf59ad273755ae8f716f567e153d5ab07
 MISC metadata.xml 1061 RMD160 f49521071624a8e557a12ef0dfd19e17d60f951c SHA1 bae555c5ad9c70f3271e427a200451dd3620cf6a SHA256 7c3c6951a2f416a78a1068d791ef798a512a64d92d93109ad3ddc10b7775ddb3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk4oVLgACgkQQe4uqXYgU9WgJgCeKLSTqDhi3+VkyfOVYmsEwIIV
-T3EAn2yMpVOrDsNm8KzBymLOlaTwzDxJ
-=sYsV
+iEYEARECAAYFAk4oYR8ACgkQQe4uqXYgU9V0IACePBg/nzHPPy6t02mF7ZbGOc4V
+kT8AoNVEOuMYL2MUizrnQzdUFr1YL7og
+=4JbP
 -----END PGP SIGNATURE-----
